# Siebenwind-Beta-Client

./: .clang-format  .gitignore  CMakeLists.txt  README.md
OrionUO/: Backend.h  BaseQueue.cpp  BaseQueue.h  CMakeLists.txt  CharacterList.cpp  CharacterList.h  CityList.cpp  CityList.h  ClickObject.cpp  ClickObject.h  CommonInterfaces.cpp  Config.cpp  Config.h  Constants.h  Container.cpp  Container.h  ContainerStack.cpp  ContainerStack.h  DateTimeStamp.cpp  DateTimeStamp.h  DefinitionMacro.h  Definitions.h  ExceptionFilter.cpp  ExceptionFilter.h  GameInput.cpp  GameInput.h  GameVars.cpp  GameVars.h  GameWindow.cpp  GameWindow.h  Globals.cpp  Globals.h  ImageBounds.cpp  ImageBounds.h  IndexObject.cpp  IndexObject.h  Logging.cpp  Logging.h  Macro.cpp  Macro.h  (+65 more)
OrionUO/Audio/: AudioTypes.h
OrionUO/Core/: App.cpp  App.h  BaseTypes.h  BitSet.h  CommandLine.cpp  CommandLine.h  Connection.cpp  Connection.h  Console.cpp  Console.h  Core.cpp  Core.h  DataStream.cpp  DataStream.h  Enums.h  File.cpp  File.h  Input.h  Keys.h  Log.cpp  Log.h  MappedFile.cpp  MappedFile.h  Minimal.h  Optional.h  PacketMessage.cpp  PacketMessage.h  PacketReader.cpp  PacketReader.h  Platform.cpp  Platform.h  Random.cpp  Random.h  Rect.h  Sockets.cpp  Sockets.h  StringUtils.cpp  StringUtils.h  TextFileParser.cpp  TextFileParser.h  (+7 more)
OrionUO/Crypt/: CryptEntry.cpp  CryptEntry.h  GameCrypt.cpp  GameCrypt.h  LoginCrypt.cpp  LoginCrypt.h  aes.h  md5.cpp  md5.h  platform.h  table.h
OrionUO/GLEngine/: GLEngine.cpp  GLEngine.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLHTMLTextTexture.cpp  GLHTMLTextTexture.h  GLHeaders.h  GLShader.cpp  GLShader.h  GLTextTexture.cpp  GLTextTexture.h  GLTexture.cpp  GLTexture.h  GLTextureCircleOfTransparency.cpp  GLTextureCircleOfTransparency.h
OrionUO/GUI/: BaseGUI.cpp  BaseGUI.h  GUI.h  GUIAlphaBlending.cpp  GUIAlphaBlending.h  GUIBlending.cpp  GUIBlending.h  GUIBuff.cpp  GUIBuff.h  GUIBulletinBoardObject.cpp  GUIBulletinBoardObject.h  GUIButton.cpp  GUIButton.h  GUIButtonTileart.cpp  GUIButtonTileart.h  GUICheckbox.cpp  GUICheckbox.h  GUIChecktrans.cpp  GUIChecktrans.h  GUIColoredPolygone.cpp  GUIColoredPolygone.h  GUIComboBox.cpp  GUIComboBox.h  GUIComboboxText.cpp  GUIComboboxText.h  GUIDataBox.cpp  GUIDataBox.h  GUIDrawObject.cpp  GUIDrawObject.h  GUIExternalTexture.cpp  GUIExternalTexture.h  GUIGenericText.cpp  GUIGenericText.h  GUIGenericTextEntry.cpp  GUIGenericTextEntry.h  GUIGlobalColor.cpp  GUIGlobalColor.h  GUIGroup.cpp  GUIGroup.h  GUIGumppic.cpp  (+65 more)
OrionUO/GameObjects/: CustomHouseMultiObject.cpp  CustomHouseMultiObject.h  CustomHouseObjects.cpp  CustomHouseObjects.h  GameCharacter.cpp  GameCharacter.h  GameEffect.cpp  GameEffect.h  GameEffectDrag.cpp  GameEffectDrag.h  GameEffectMoving.cpp  GameEffectMoving.h  GameItem.cpp  GameItem.h  GameObject.cpp  GameObject.h  GamePlayer.cpp  GamePlayer.h  GameWorld.cpp  GameWorld.h  LandObject.cpp  LandObject.h  MapBlock.cpp  MapBlock.h  MapObject.cpp  MapObject.h  MultiObject.cpp  MultiObject.h  ObjectOnCursor.cpp  ObjectOnCursor.h  RenderStaticObject.cpp  RenderStaticObject.h  StaticObject.cpp  StaticObject.h
OrionUO/Gumps/: Gump.cpp  Gump.h  GumpAbility.cpp  GumpAbility.h  GumpBaseScroll.cpp  GumpBaseScroll.h  GumpBook.cpp  GumpBook.h  GumpBuff.cpp  GumpBuff.h  GumpBulletinBoard.cpp  GumpBulletinBoard.h  GumpBulletinBoardItem.cpp  GumpBulletinBoardItem.h  GumpCombatBook.cpp  GumpCombatBook.h  GumpConsoleType.cpp  GumpConsoleType.h  GumpContainer.cpp  GumpContainer.h  GumpCustomHouse.cpp  GumpCustomHouse.h  GumpDrag.cpp  GumpDrag.h  GumpDye.cpp  GumpDye.h  GumpGeneric.cpp  GumpGeneric.h  GumpGrayMenu.cpp  GumpGrayMenu.h  GumpJournal.cpp  GumpJournal.h  GumpMap.cpp  GumpMap.h  GumpMenu.cpp  GumpMenu.h  GumpMenubar.cpp  GumpMenubar.h  GumpMinimap.cpp  GumpMinimap.h  (+64 more)
OrionUO/Managers/: AnimationManager.cpp  AnimationManager.h  CityManager.cpp  CityManager.h  ClilocManager.cpp  ClilocManager.h  ColorManager.cpp  ColorManager.h  ConfigManager.cpp  ConfigManager.h  ConnectionManager.cpp  ConnectionManager.h  CorpseManager.cpp  CorpseManager.h  CreateCharacterManager.cpp  CreateCharacterManager.h  CustomHousesManager.cpp  CustomHousesManager.h  EffectManager.cpp  EffectManager.h  FileManager.cpp  FileManager.h  FontsManager.cpp  FontsManager.h  GumpManager.cpp  GumpManager.h  IntlocManager.cpp  IntlocManager.h  MacroManager.cpp  MacroManager.h  MapManager.cpp  MapManager.h  MouseManager.cpp  MouseManager.h  ObjectPropertiesManager.cpp  ObjectPropertiesManager.h  OptionsMacroManager.cpp  OptionsMacroManager.h  PacketManager.cpp  PacketManager.h  (+16 more)
OrionUO/Network/: Connection.cpp  Connection.h  Packets.cpp  Packets.h  PluginPackets.cpp  PluginPackets.h  UOHuffman.cpp  UOHuffman.h
OrionUO/Resources/: Cursors.cpp  Cursors.h  Manager.h  Resource.h
OrionUO/ScreenStages/: BaseScreen.cpp  BaseScreen.h  CharacterListScreen.cpp  CharacterListScreen.h  ConnectionScreen.cpp  ConnectionScreen.h  CreateCharacterScreen.cpp  CreateCharacterScreen.h  GameBlockedScreen.cpp  GameBlockedScreen.h  GameScreen.cpp  GameScreen.h  MainScreen.cpp  MainScreen.h  SelectProfessionScreen.cpp  SelectProfessionScreen.h  SelectTownScreen.cpp  SelectTownScreen.h  ServerScreen.cpp  ServerScreen.h
OrionUO/TextEngine/: EntryText.cpp  EntryText.h  GameConsole.cpp  GameConsole.h  Journal.cpp  Journal.h  RenderTextObject.cpp  RenderTextObject.h  TextContainer.cpp  TextContainer.h  TextData.cpp  TextData.h  TextRenderer.cpp  TextRenderer.h
OrionUO/Utility/: AutoResetEvent.cpp  AutoResetEvent.h  PingThread.cpp  PingThread.h  Pinger.cpp  Pinger.h
OrionUO/Walker/: FastWalk.cpp  FastWalk.h  PathFinder.cpp  PathFinder.h  PathNode.cpp  PathNode.h  WalkData.cpp  WalkData.h  Walker.cpp  Walker.h
OrionUO/Wisp/: WispApplication.cpp  WispApplication.h  WispConnection.cpp  WispConnection.h  WispPacketMessage.cpp  WispPacketMessage.h  WispPacketReader.cpp  WispPacketReader.h  WispThread.cpp  WispThread.h  WispThreadedTimer.cpp  WispThreadedTimer.h  WispWindow.cpp  WispWindow.h
OrionUO/plugin/: commoninterfaces.h  enumlist.h  mulstruct.h  plugininterface.h
(+13 files in other folders)
